[package]
name = "magic-art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-file = "0.2.3"
duct = "0.13.5"
serde = { version = "1.0.143", features = ["derive"] }
time = { version = "0.3.13", features = ["macros"] }
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["env-filter", "time", "local-time"]}
